--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "node-file-parser": "^2.2.2",
+    "parse": "^1.10.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.4.1",
